--- a/web/src/style/reset.css
+++ b/web/src/style/reset.css
@@ -54,3 +54,10 @@ div.mainWrapper{
   width: 1000px;
   margin: auto;
 }
+
+.Header{
+  background-color: white;
+  top: 0;
+  position: fixed;
+  width: 100%;
+}
