--- a/web/src/style/reset.css
+++ b/web/src/style/reset.css
@@ -1,5 +1,4 @@
 
-
 div.sticky{
   position: -webkit-sticky;
   position: sticky;
@@ -33,7 +32,7 @@ div.mainWrapper{
   margin: auto;
 }
 
-.Header{
+.header{
   background-color: white;
   top: 0;
   position: fixed;
